# ai-agent-sandbox-blueprint

./: .env.example  .gitignore  .npmrc  BLUEPRINT_FACTORY_STATUS.md  CLAUDE.md  CODEX_LAYER_TASK.md  Cargo.toml  DESIGN.md  Dockerfile  PRICING.md  PRODUCT_BRIEF.md  README.md  SDK_DESIGN.md  SPEC-instance-redesign.md  TEE-GUIDE.md  deny.toml  docker-compose.local.yml  docker-compose.test.yml  flake.nix  foundry.toml  pnpm-lock.yaml  pnpm-workspace.yaml  remappings.txt  slither.config.json
.evolve/: arena-inspired-sandbox-console-redesign-2026-06-05.md  current.json  experiments.jsonl  progress.md  sandbox-console-product-design-audit-2026-06-05.md  sandbox-launch-wizard-audit-2026-06-06.md
.githooks/: pre-commit
ai-agent-instance-blueprint-bin/: Cargo.toml
ai-agent-instance-blueprint-bin/src/: main.rs
ai-agent-instance-blueprint-lib/: Cargo.toml  README.md
ai-agent-instance-blueprint-lib/src/: auto_provision.rs  billing.rs  lib.rs  reporting.rs  workflows.rs
ai-agent-instance-blueprint-lib/src/auto_provision/: chain_read.rs  config.rs  mod.rs  record.rs  runner.rs  tests.rs
ai-agent-instance-blueprint-lib/src/jobs/: exec.rs  mod.rs  provision.rs  snapshot.rs  ssh.rs  workflow.rs
ai-agent-instance-blueprint-lib/src/workflows/: chain.rs  execution.rs  mod.rs  query.rs  run_guard.rs  status.rs  stores.rs  tests.rs
ai-agent-instance-blueprint-lib/tests/: billing_anvil.rs  billing_lifecycle.rs  e2e_instance.rs  integration.rs  real_sidecar.rs
ai-agent-sandbox-blueprint-bin/: Cargo.toml
ai-agent-sandbox-blueprint-bin/src/: bootstrap.rs  consumer.rs  main.rs  tests.rs  workflow_status.rs
ai-agent-sandbox-blueprint-lib/: Cargo.toml  README.md
ai-agent-sandbox-blueprint-lib/src/: auth.rs  error.rs  http.rs  lib.rs  metrics.rs  reaper.rs  runtime.rs  util.rs  workflows.rs
ai-agent-sandbox-blueprint-lib/src/jobs/: batch.rs  exec.rs  mod.rs  sandbox.rs  ssh.rs  workflow.rs
ai-agent-sandbox-blueprint-lib/src/workflows/: chain.rs  mod.rs  run.rs  schedule.rs  spec.rs  status.rs  store.rs  tests.rs
ai-agent-sandbox-blueprint-lib/tests/: anvil.rs  e2e_operator_api.rs  integration.rs  lifecycle_bench.rs  operator_api_integration.rs  real_sidecar.rs  sidecar_integration.rs  snapshot_integration.rs  tempo_decode.rs
ai-agent-tee-instance-blueprint-bin/: Cargo.toml
ai-agent-tee-instance-blueprint-bin/src/: main.rs
ai-agent-tee-instance-blueprint-lib/: Cargo.toml  README.md
ai-agent-tee-instance-blueprint-lib/src/: lib.rs
ai-agent-tee-instance-blueprint-lib/src/jobs/: mod.rs  provision.rs
ai-agent-tee-instance-blueprint-lib/tests/: tee_config.rs  tee_integration.rs  tee_provision.rs  unit.rs
audit/: qos-metrics-sandbox-audit.md
bench-harness/: Cargo.toml
bench-harness/src/: compare.rs  criterion_ingest.rs  lib.rs  manifest.rs  stats.rs
config/: default_pricing.toml  job_pricing.toml  operator.toml
deploy/: publish-blueprint-sources.sh  register-blueprint.sh
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONTRACTS.md  SANDBOX_CREATION_BUG_LOG.md  runbook.md
metadata/: blueprint-metadata.json
sandbox-runtime/: Cargo.toml
sandbox-runtime/benches/: auth_bench.rs  circuit_breaker_bench.rs  crypto_bench.rs  http_bench.rs  rate_limit_bench.rs  scoped_session_bench.rs  session_auth_bench.rs  store_bench.rs  util_bench.rs
sandbox-runtime/src/: api_types.rs  auth.rs  chat_state.rs  circuit_breaker.rs  contracts.rs  error.rs  firecracker.rs  firecracker_dnat.rs  firecracker_lineage.rs  firecracker_warm.rs  http.rs  ingress_access_control.rs  instance_types.rs  lib.rs  live_operator_sessions.rs  metrics.rs  operator_api.rs  provision_progress.rs  rate_limit.rs  reaper.rs  runtime.rs  scoped_session_auth.rs  secret_provisioning.rs  session_auth.rs  ssh_validation.rs  store.rs  test_utils.rs  util.rs
sandbox-runtime/src/docker_warm/: config.rs  host.rs  mod.rs  reconcile.rs  serving.rs  tests.rs  types.rs
sandbox-runtime/src/firecracker/: context.rs  errors.rs  lifecycle.rs  mod.rs  provisioning.rs  reconcile.rs  tests.rs  types.rs  warm.rs  warm_host.rs
sandbox-runtime/src/firecracker_warm/: config.rs  host.rs  mod.rs  serving.rs  tests.rs  types.rs
sandbox-runtime/src/metrics/: http.rs  mod.rs  onchain.rs
sandbox-runtime/src/operator_api/: admin.rs  agents.rs  auth.rs  chat.rs  chat_handlers.rs  chat_stream.rs  errors.rs  health.rs  lifecycle.rs  mod.rs  mw.rs  ports.rs  resolve.rs  sandboxes.rs  secrets.rs  sessions_core.rs  sessions_handlers.rs  sidecar_calls.rs  sidecar_core.rs  sse.rs  ssh.rs  tests.rs
sandbox-runtime/src/reaper/: gc.rs  mod.rs  reconcile.rs  snapshot.rs  tests.rs  tick.rs
sandbox-runtime/src/runtime/: admission.rs  backend.rs  create.rs  docker_client.rs  docker_config.rs  docker_create.rs  env_vars.rs  firecracker_create.rs  lifecycle.rs  lookup.rs  mod.rs  ports.rs  secrets.rs  snapshots.rs  ssh.rs  ssh_commands.rs  tests.rs  timings.rs  upgrades.rs
sandbox-runtime/src/scoped_session_auth/: config.rs  mod.rs  service.rs  state.rs  tests.rs
sandbox-runtime/src/session_auth/: challenge.rs  eip191.rs  extractor.rs  mod.rs  session.rs  tests.rs
sandbox-runtime/src/tee/: attestation.rs  aws_nitro.rs  azure.rs  backend.rs  backend_factory.rs  direct.rs  gcp.rs  mock.rs  mod.rs  phala.rs  sealed_secrets.rs  sealed_secrets_api.rs  sidecar_attest.rs  tests.rs  verification.rs  verify.rs  verify_flow.rs
sandbox-runtime/src/tee/azure/: backend.rs  methods.rs  mod.rs
sandbox-runtime/src/tee/sealed_secrets_api/: attestation.rs  keys.rs  mod.rs  tests.rs
sandbox-runtime/src/tee/verify/: certs.rs  mod.rs  nitro.rs  sev_snp.rs  tdx.rs  tests.rs
sandbox-runtime/src/util/: client.rs  json.rs  mod.rs  shell.rs  snapshot.rs  tests.rs  timestamp.rs  username.rs
sandbox-runtime/tests/: admission_control.rs  bench_regression.rs  firecracker_host_agent.rs  firecracker_in_process.rs  firecracker_orphan_reconcile.rs  firecracker_reconcile_claimed.rs  firecracker_warm_admission.rs  firecracker_warm_memory_budget.rs  lifecycle_bench.rs  ssh_e2e.rs  tee_integration.rs
sandbox-runtime/tests/tee_vectors/: README.md
scripts/: e2e-bpm.sh  (+9 more)
(+309 files in other folders)
