[workspace]
resolver = "3"
members = [
    "sandbox-runtime",
    "ai-agent-sandbox-blueprint-lib",
    "ai-agent-sandbox-blueprint-bin",
    "ai-agent-instance-blueprint-lib",
    "ai-agent-instance-blueprint-bin",
    "ai-agent-tee-instance-blueprint-lib",
    "ai-agent-tee-instance-blueprint-bin",
]

[workspace.package]
authors = ["Drew Stone"]
edition = "2024"
description = "AI Agent Sandbox Blueprint"
license = "MIT OR Apache-2.0"
