[workspace]
resolver = "3"
members = [
    "sandbox-runtime",
    "ai-agent-sandbox-blueprint-lib",
    "ai-agent-sandbox-blueprint-bin",
    "ai-agent-instance-blueprint-lib",
    "ai-agent-instance-blueprint-bin",
    "ai-agent-tee-instance-blueprint-lib",
    "ai-agent-tee-instance-blueprint-bin",
    "bench-harness",
]

[workspace.package]
authors = ["Drew Stone"]
edition = "2024"
description = "AI Agent Sandbox Blueprint"
license = "MIT OR Apache-2.0"

# Reduce debug build sizes (~60-70% smaller binaries)
[profile.dev]
split-debuginfo = "unpacked"  # separate debug info from binaries

[profile.dev.package."*"]
debug = 1  # line tables only for dependencies (not full DWARF)
