[package]
name = "ai-agent-instance-blueprint-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "AI Agent Instance Blueprint — subscription-based 1:1 sandbox per service instance"
license.workspace = true

[features]
billing = ["dep:reqwest"]

[dependencies]
sandbox-runtime = { path = "../sandbox-runtime" }
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = ["std", "tracing", "macros", "tangle", "local-store"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cron = "0.15"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["sync", "rt", "time"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
anyhow = "1"
axum = "0.8"
sandbox-runtime = { path = "../sandbox-runtime", features = ["test-utils"] }
blueprint-anvil-testing-utils = { git = "https://github.com/tangle-network/blueprint.git", branch = "main" }
hex = "0.4"
docktopus = { version = "0.4.0-alpha.3", features = ["deploy"] }
futures-util = "0.3"
k256 = { version = "0.13", features = ["ecdsa"] }
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_json = "1"
tiny-keccak = { version = "2", features = ["keccak"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
wiremock = "0.6"
