[package]
name = "ai-agent-sandbox-blueprint-bin"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "ai-agent-sandbox-blueprint"
path = "src/main.rs"

[dependencies]
ai-agent-sandbox-blueprint-lib = { path = "../ai-agent-sandbox-blueprint-lib" }
blueprint-producers-extra = { path = "../../blueprint-sdk/crates/producers-extra", features = ["cron"] }
blueprint-sdk = { path = "../../blueprint-sdk/crates/sdk", default-features = false, features = ["std", "tangle"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
