[package]
name = "ai-agent-sandbox-blueprint-bin"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "ai-agent-sandbox-blueprint"
path = "src/main.rs"

[features]
qos = ["dep:blueprint-qos"]

[dependencies]
ai-agent-sandbox-blueprint-lib = { path = "../ai-agent-sandbox-blueprint-lib" }
blueprint-producers-extra = { version = "=0.2.0-alpha.4", features = ["cron"] }
blueprint-qos = { version = "=0.2.0-alpha.6", optional = true }
blueprint-sdk = { version = "=0.2.0-alpha.6", default-features = false, features = ["std", "tangle"] }
axum = "0.8"
futures-util = "0.3"
sandbox-runtime = { path = "../sandbox-runtime" }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
