[package]
name = "ai-agent-sandbox-blueprint-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint", branch = "v2", default-features = false, features = ["std", "tracing", "macros", "tangle-evm"] }
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
anyhow = "1"
blueprint-anvil-testing-utils = { git = "https://github.com/tangle-network/blueprint", branch = "v2" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
