[package]
name = "ai-agent-sandbox-blueprint-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
blueprint-sdk = { path = "../../blueprint-sdk/crates/sdk", default-features = false, features = ["std", "tracing", "macros", "tangle", "local-store"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cron = "0.12"
docktopus = { path = "../../docktopus", features = ["deploy"] }
hex = "0.4"
once_cell = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
tokio = { version = "1", default-features = false, features = ["sync", "rt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
anyhow = "1"
blueprint-anvil-testing-utils = { path = "../../blueprint-sdk/crates/testing-utils/anvil" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
wiremock = "0.6"
