[package]
name = "ai-agent-sandbox-blueprint-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
sandbox-runtime = { path = "../sandbox-runtime" }
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = ["std", "tracing", "macros", "tangle", "local-store"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cron = "0.15"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["sync", "rt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
anyhow = "1"
axum = "0.8"
blueprint-anvil-testing-utils = { git = "https://github.com/tangle-network/blueprint.git", branch = "main" }
docktopus = { version = "0.4.0-alpha.3", features = ["deploy"] }
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tempfile = "3"
tiny-keccak = { version = "2", features = ["keccak"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
wiremock = "0.6"
