[package]
name = "ai-agent-tee-instance-blueprint-bin"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "AI Agent TEE Instance Blueprint runner binary"
license.workspace = true

[[bin]]
name = "ai-agent-tee-instance-blueprint"
path = "src/main.rs"

[features]
billing = ["ai-agent-tee-instance-blueprint-lib/billing", "dep:blueprint-tangle-extra"]

[dependencies]
ai-agent-tee-instance-blueprint-lib = { path = "../ai-agent-tee-instance-blueprint-lib" }
sandbox-runtime = { path = "../sandbox-runtime", features = ["tee-all"] }
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = ["std", "tangle"] }
blueprint-tangle-extra = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", features = ["keepers"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
