[package]
name = "ai-agent-tee-instance-blueprint-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "AI Agent TEE Instance Blueprint — TEE-backed 1:1 sandbox per service instance"
license.workspace = true

[dependencies]
ai-agent-instance-blueprint-lib = { path = "../ai-agent-instance-blueprint-lib" }
sandbox-runtime = { path = "../sandbox-runtime", features = ["tee-phala"] }
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = ["std", "tracing", "macros", "tangle", "local-store"] }
once_cell = "1"
