[package]
name = "bench-harness"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Statistical aggregator, run-manifest writer, and regression detector for Criterion-backed benchmarks"
license.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "bench-harness"
path = "src/bin/bench-harness.rs"
