[package]
name = "sandbox-runtime"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Shared sandbox container runtime for AI agent blueprints"
license.workspace = true

[dependencies]
async-trait = "0.1"
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = ["std", "tracing", "local-store"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
docktopus = { version = "0.4.0-alpha.3", features = ["deploy"] }
hex = "0.4"
once_cell = "1"
phala-tee-deploy-rs = { version = "0.2.0", optional = true }
rand = "0.8"

# Cloud TEE backends (optional, gated by features)
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-sdk-ec2 = { version = "1", optional = true }
gcp_auth = { version = "0.12", optional = true }
base64 = { version = "0.22", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
tokio = { version = "1", default-features = false, features = ["sync", "rt", "time"] }
uuid = { version = "1", features = ["v4"] }

# Session auth (EIP-191 + PASETO v4)
hkdf = "0.12"
k256 = { version = "0.13", features = ["ecdsa"] }
pasetors = "0.6"
sha2 = "0.10"
tiny-keccak = { version = "2", features = ["keccak"] }
time = { version = "0.3", features = ["formatting", "parsing"] }

# Operator API
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }

[features]
default = []
test-utils = []
tee-phala = ["dep:phala-tee-deploy-rs"]
tee-direct = []
tee-aws-nitro = ["dep:aws-config", "dep:aws-sdk-ec2", "dep:base64"]
tee-gcp = ["dep:gcp_auth", "dep:base64"]
tee-azure = ["dep:base64"]
tee-all = ["tee-phala", "tee-direct", "tee-aws-nitro", "tee-gcp", "tee-azure"]
