[package]
name = "sandbox-runtime"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Shared sandbox container runtime for AI agent blueprints"
license.workspace = true

[dependencies]
async-trait = "0.1"
alloy = { version = "1", default-features = false, features = ["sol-types"] }
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = ["std", "tracing", "local-store"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
docktopus = { version = "0.4.0-alpha.3", features = ["deploy"] }
hex = "0.4"
once_cell = "1"
libc = { version = "0.2", optional = true }
phala-tee-deploy-rs = { version = "0.2.0", optional = true }
rand = "0.8"

# Cloud TEE backends (optional, gated by features)
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-sdk-ec2 = { version = "1", optional = true }
gcp_auth = { version = "0.12", optional = true }
base64 = "0.22"
anyhow = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
tokio = { version = "1", default-features = false, features = ["sync", "rt", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# At-rest encryption for secrets
chacha20poly1305 = "0.10"

# Session auth (EIP-191 + PASETO v4)
hkdf = "0.12"
k256 = { version = "0.13", features = ["ecdsa"] }
pasetors = "0.6"
sha2 = "0.10"
tiny-keccak = { version = "2", features = ["keccak"] }
time = { version = "0.3", features = ["formatting", "parsing"] }

# Operator API
axum = "0.8"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "timeout", "trace"] }

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }

[features]
default = []
test-utils = ["dep:anyhow"]
tee-phala = ["dep:phala-tee-deploy-rs"]
tee-direct = ["dep:libc"]
tee-aws-nitro = ["dep:aws-config", "dep:aws-sdk-ec2"]
tee-gcp = ["dep:gcp_auth"]
tee-azure = []
tee-all = ["tee-phala", "tee-direct", "tee-aws-nitro", "tee-gcp", "tee-azure"]
# Testing feature: enables DirectTeeBackend without TEE device passthrough
test-direct-no-device = ["tee-direct", "test-utils"]
