[package]
name = "sandbox-runtime"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Shared sandbox container runtime for AI agent blueprints"
license.workspace = true

[dependencies]
async-trait = "0.1"
alloy = { version = "=1.8.3", default-features = false, features = ["sol-types"] }
blueprint-sdk = { version = "=0.2.0-alpha.10", default-features = false, features = ["std", "tracing", "local-store"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dashmap = "6"
docktopus = { version = "0.4.0-alpha.3", features = ["deploy"] }
hex = "0.4"
microvm-runtime = { version = "0.4.0-alpha.3", features = ["firecracker"] }
microvm-warm-pool = "0.1.0-alpha.2"
once_cell = "1"
libc = { version = "0.2", optional = true }
phala-tee-deploy-rs = { version = "0.2.0", optional = true }
rand = "0.8"

# Cloud TEE backends (optional, gated by features)
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-sdk-ec2 = { version = "1", optional = true }
gcp_auth = { version = "0.12", optional = true }

# TEE quote/attestation verification against hardware roots of trust.
# All optional and behind `tee-verify` so the default + non-TEE builds never
# pull these heavier crypto/X.509 deps.
#  - dcap-qvl: pure-Rust Intel SGX/TDX DCAP quote verification (PCK chain to the
#    Intel SGX Root CA bundled in the crate + TCB status + collateral expiry).
#    `rustcrypto` provider avoids the C `ring` dependency.
#  - sev: AMD SEV-SNP attestation report + VCEK/VLEK chain to the built-in AMD
#    ARK/ASK roots. `crypto_nossl` selects the pure-Rust (p384/x509-cert) path.
#  - coset: COSE_Sign1 parsing for AWS Nitro attestation documents.
dcap-qvl = { version = "=0.5.2", default-features = false, features = [
    "std",
    "rustcrypto",
    "default-x509",
], optional = true }
sev = { version = "=8.0.0", default-features = false, features = [
    "snp",
    "crypto_nossl",
], optional = true }
# X.509 validity-window parsing for the SEV-SNP chain. The `sev` crate's
# `crypto_nossl` path verifies cert signatures but not notBefore/notAfter and
# consults no CRL, so we check expiry ourselves. Pinned to the version `sev`
# already pulls transitively.
x509-cert = { version = "=0.2.5", default-features = false, optional = true }
# AMD KDS CRL revocation check for the SEV-SNP chain. The `sev` crate verifies
# the VCEK→ASK→ARK signatures but consults no CRL, so a revoked-but-in-window
# VEK would otherwise pass. We verify the operator-supplied KDS CRL's RSA-PSS
# signature against the pinned ASK using the SAME crypto stack `sev` uses
# (RSA-PSS-SHA384), pinned to the versions `sev` already pulls transitively, so
# the check is genuine rather than a re-implementation.
rsa = { version = "=0.9.10", default-features = false, features = [
    "sha2",
], optional = true }
spki = { version = "=0.7.3", default-features = false, optional = true }
der = { version = "=0.7.10", default-features = false, features = [
    "alloc",
], optional = true }
signature = { version = "=2.2.0", default-features = false, optional = true }
coset = { version = "=0.4.2", optional = true }
base64 = "0.22"
anyhow = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
tokio = { version = "1", default-features = false, features = ["sync", "rt", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# At-rest encryption for secrets
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }

# Session auth (EIP-191 + PASETO v4)
hkdf = "0.12"
k256 = { version = "0.13", features = ["ecdsa"] }
pasetors = "0.6"
sha2 = "0.10"
tiny-keccak = { version = "2", features = ["keccak"] }
time = { version = "0.3", features = ["formatting", "parsing"] }

# Operator API
axum = "0.8"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "timeout", "trace"] }

[dev-dependencies]
bench-harness = { path = "../bench-harness" }
criterion = { version = "0.5", features = ["html_reports"] }
http-body-util = "0.1"
hyper = "1"
serial_test = "3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "session_auth_bench"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "rate_limit_bench"
harness = false

[[bench]]
name = "circuit_breaker_bench"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "scoped_session_bench"
harness = false

[[bench]]
name = "auth_bench"
harness = false

[[bench]]
name = "util_bench"
harness = false

[[bench]]
name = "http_bench"
harness = false

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "crypto_bench"
harness = false

[features]
default = []
test-utils = ["dep:anyhow"]
tee-phala = ["dep:phala-tee-deploy-rs"]
tee-direct = ["dep:libc"]
tee-aws-nitro = ["dep:aws-config", "dep:aws-sdk-ec2"]
tee-gcp = ["dep:gcp_auth"]
tee-azure = []
# Cryptographic quote verification against hardware roots of trust (Intel
# SGX/TDX DCAP, AMD SEV-SNP, AWS Nitro). Heavy crypto deps live ONLY here.
tee-verify = [
    "dep:dcap-qvl",
    "dep:sev",
    "dep:coset",
    "dep:x509-cert",
    "dep:rsa",
    "dep:spki",
    "dep:der",
    "dep:signature",
]
tee-all = ["tee-phala", "tee-direct", "tee-aws-nitro", "tee-gcp", "tee-azure", "tee-verify"]
# Testing feature: enables DirectTeeBackend without TEE device passthrough
test-direct-no-device = ["tee-direct", "test-utils"]
